# distinct_unique_words

./: .clang-tidy  CMakeLists.txt  README.md  data_generator.cpp  performance_test.sh  simple_test.py  thread_safe_hash_set.h  threadpool.cpp  threadpool.h  unique_words_counter.cpp  unique_words_counter.h
.github/workflows/: cmake-multi-platform.yml
src/: data_generator.cpp  main.cpp  thread_safe_hash_set.h  threadpool.cpp  threadpool.h  unique_words_counter.cpp  unique_words_counter.h
